Disable touch-action on mobile-nav. Prevents unintended behavior when swiping

--- a/src/mobile-nav.css
+++ b/src/mobile-nav.css
@@ -1,10 +1,20 @@
+body {
+  padding: 0;
+  margin: 0;
+}
 .mobile-nav{
   width: 100vw;
   overflow-x: hidden;
+
+  /* remove for production */
+  border: 1px solid black;
 }
 .mobile-nav *{
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+
+  touch-action: none;
 }
 
 .mobile-nav a,
